Include --add-opens to let subsystem tests to run with SE 16