@@ -10136,10 +10136,13 @@
                 <jdk>[9,)</jdk>
             </activation>
             <properties>
-                <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                <default.modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                     --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
                     --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-                    --add-modules=java.se</modular.jdk.args>
+                    --add-modules=java.se
+				    --add-opens=java.base/java.util=ALL-UNNAMED
+				    --add-opens=java.base/java.security=ALL-UNNAMED</default.modular.jdk.args>
+                <modular.jdk.args>${default.modular.jdk.args}</modular.jdk.args>
             </properties>
         </profile>
         <profile>
